Clean up SDK install

--- a/ws-android-sdk/Dockerfile
+++ b/ws-android-sdk/Dockerfile
@@ -42,15 +42,16 @@ RUN GRADLE_VERSION=2.5 && \
 
 # Update & Install Android Tools
 # Cloud message, billing, licensing, play services, admob, analytics
-RUN \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter tools --no-ui --force -a && \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter platform-tools --no-ui --force -a && \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter android-19 --no-ui --force -a && \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter android-21 --no-ui --force -a && \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter android-22 --no-ui --force -a && \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter android-23 --no-ui --force -a && \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter extra --no-ui --force -a && \
-    echo y | /usr/local/android-sdk-linux/tools/android update sdk --all --filter build-tools-23.0.2 --no-ui --force
+RUN yes | (\
+    /usr/local/android-sdk-linux/tools/android update sdk --filter tools --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --filter platform-tools --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --filter android-19 --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --filter android-20 --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --filter android-21 --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --filter android-22 --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --filter android-23 --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --filter extra --no-ui --force -a && \
+    /usr/local/android-sdk-linux/tools/android update sdk --all --filter build-tools-23.0.2 --no-ui --force) 
 
 # Set PATH
 ENV ANDROID_HOME=/usr/local/android-sdk-linux ANDROID_NDK_HOME=/usr/local/android-ndk-r10e JAVA_HOME=/usr/lib/jvm/java-7-oracle GRADLE_HOME=/usr/local/gradle-2.5
