Set up heroku during build instead of first run

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -137,6 +137,7 @@ RUN sudo -u ubuntu -i bash -l -c " \
 # Can't include new npm since it makes "npm install -g npm" fail:
 # sudo -u ubuntu -i bash -l -c "npm install -g npm@3.3.6" && \
 RUN wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh -e
+RUN yes no | heroku
 RUN sudo -u ubuntu -i bash -l -c "npm install jitsu@0.15.0 -g && \
                                   npm install azure-cli@0.9.9 -g && \
                                   npm install grunt@0.4.5 -g && \
