--- a/ws-nodejs/Dockerfile
+++ b/ws-nodejs/Dockerfile
@@ -1,5 +1,5 @@
 FROM cloud9/workspace
-MAINTAINER Fabian Jakobs <fabian@c9.io>
+MAINTAINER Cloud9 IDE, inc. <info@c9.io>
 
 RUN rm -rf /home/ubuntu/workspace && \
     env GIT_SSL_NO_VERIFY=true git clone https://github.com/c9/chat-example.git /home/ubuntu/workspace
