--- a/ws-python/Dockerfile
+++ b/ws-python/Dockerfile
@@ -1,5 +1,5 @@
 FROM cloud9/workspace
-MAINTAINER Fabian Jakobs <fabian@c9.io>
+MAINTAINER Cloud9 IDE, inc. <info@c9.io>
 
 RUN pip install Django==1.9
 
