--- a/ws-ruby/Dockerfile
+++ b/ws-ruby/Dockerfile
@@ -1,5 +1,5 @@
 FROM cloud9/workspace
-MAINTAINER Fabian Jakobs <fabian@c9.io>
+MAINTAINER Cloud9 IDE, inc. <info@c9.io>
 
 RUN echo "Version 1.0"
 
