--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -112,7 +112,9 @@ RUN sudo -u ubuntu -i bash -l -c "npm install jitsu@0.15.0 -g && \
                                   gem install compass -v 1.0.3"
 RUN wget -O /tmp/deb.deb http://go-cli.s3-website-us-east-1.amazonaws.com/releases/latest/cf-cli_amd64.deb && \
     dpkg -i /tmp/deb.deb && \
-    wget -O /tmp/deb.deb https://www.dropbox.com/download?dl=packages/ubuntu/dropbox_1.6.0_amd64.deb && \
+    rm /tmp/deb.deb
+
+RUN wget -O /tmp/deb.deb https://www.dropbox.com/download?dl=packages/ubuntu/dropbox_1.6.0_amd64.deb && \
     dpkg -i /tmp/deb.deb && \
     rm /tmp/deb.deb
 
