Install apache in base image. Move php chowning to ws-php

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -135,6 +135,9 @@ RUN echo -n "" > /etc/motd && \
     sudo -i -u ubuntu HOME=/home/ubuntu bash -i /etc/bash_completion && \
     HOME=/root bash -l /etc/bash_completion
 
+# Install apache
+RUN apt-get install -y apache2
+
 ADD ./files/etc /etc
 ADD ./files/home /home
 RUN cp /home/ubuntu/.gitignore /home/ubuntu/.hgignore && \
@@ -144,7 +147,6 @@ RUN cp /home/ubuntu/.gitignore /home/ubuntu/.hgignore && \
 RUN echo "Configure apache2" && \
     a2enmod rewrite && \
     sed -i 's/Listen 80\b/Listen 8080/' /etc/apache2/ports.conf && \
-    chmod 777 /var/lib/phpmyadmin/tmp && \
     sed -Ei 's/(.*)secure_path.*/\1!secure_path/' /etc/sudoers && \
     touch /etc/init.d/systemd-logind
 
