--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -47,23 +47,15 @@ RUN GRADLE_VERSION=2.5 && \
     rm gradle-bin.zip
 
 # Update & Install Android Tools
-# Cloud message, billing, licensing, play services, admob, analytics
-RUN yes | (\
-    /usr/local/android-sdk-linux/tools/android update sdk --filter tools --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --filter platform-tools --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --filter android-19 --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --filter android-20 --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --filter android-21 --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --filter android-22 --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --filter android-23 --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --filter extra --no-ui --force -a && \
-    /usr/local/android-sdk-linux/tools/android update sdk --all --filter build-tools-23.0.2 --no-ui --force) 
+RUN for filter in tools,platform-tools,android-19,android-20,android-21,android-22,android-23,extra,build-tools-23.0.2; do \
+        echo y | /usr/local/android-sdk-linux/tools/android update sdk --filter $filter --no-ui --force; \
+    done
 
 # Set PATH
 RUN \
-    echo 'export ANDROID_HOME=/usr/local/android-sdk-linux' > /etc/profile.d/android.sh && \
-    echo 'export ANDROID_SDK_HOME=/usr/local/android-sdk-linux' >> /etc/profile.d/android.sh && \
-    echo 'export ANDROID_NDK_HOME=/usr/local/android-ndk-r10e' >> /etc/profile.d/android.sh && \
-    echo 'export GRADLE_HOME=/usr/local/gradle-2.5' >> /etc/profile.d/android.sh && \
-    echo 'export NDK_PROJECT_PATH=/home/ubuntu/workspace' >> /etc/profile.d/android.sh && \
-    echo 'export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_NDK_HOME/platform-tools:$ANDROID_NDK_HOME:$GRADLE_HOME/bin' >> /etc/profile.d/android.sh
+    echo 'export ANDROID_HOME=/usr/local/android-sdk-linux' >> /home/ubuntu/.bashrc && \
+    echo 'export ANDROID_SDK_HOME=/usr/local/android-sdk-linux' >> /home/ubuntu/.bashrc && \
+    echo 'export ANDROID_NDK_HOME=/usr/local/android-ndk-r10e' >> /home/ubuntu/.bashrc && \
+    echo 'export GRADLE_HOME=/usr/local/gradle-2.5' >> /home/ubuntu/.bashrc && \
+    echo 'export NDK_PROJECT_PATH=/home/ubuntu/workspace' >> /home/ubuntu/.bashrc && \
+    echo 'export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_NDK_HOME/platform-tools:$ANDROID_NDK_HOME:$GRADLE_HOME/bin' >> /home/ubuntu/.bashrc
