--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -46,7 +46,5 @@ RUN for filter in tools,platform-tools,android-19,android-20,android-21,android-
 RUN \
     echo 'export ANDROID_HOME=/usr/local/android-sdk-linux' >> /home/ubuntu/.bashrc && \
     echo 'export ANDROID_SDK_HOME=/usr/local/android-sdk-linux' >> /home/ubuntu/.bashrc && \
-    echo 'export ANDROID_NDK_HOME=/usr/local/android-ndk-r10e' >> /home/ubuntu/.bashrc && \
     echo 'export GRADLE_HOME=/usr/local/gradle-2.5' >> /home/ubuntu/.bashrc && \
-    echo 'export NDK_PROJECT_PATH=/home/ubuntu/workspace' >> /home/ubuntu/.bashrc && \
-    echo 'export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_NDK_HOME/platform-tools:$ANDROID_NDK_HOME:$GRADLE_HOME/bin' >> /home/ubuntu/.bashrc
+    echo 'export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_SDK_HOME/platform-tools:$GRADLE_HOME/bin' >> /home/ubuntu/.bashrc
