--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -47,4 +47,4 @@ RUN \
     echo 'export ANDROID_HOME=/usr/local/android-sdk-linux' >> /home/ubuntu/.bashrc && \
     echo 'export ANDROID_SDK_HOME=/usr/local/android-sdk-linux' >> /home/ubuntu/.bashrc && \
     echo 'export GRADLE_HOME=/usr/local/gradle-2.5' >> /home/ubuntu/.bashrc && \
-    echo 'export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_SDK_HOME/platform-tools:$GRADLE_HOME/bin' >> /home/ubuntu/.bashrc
+    echo 'export PATH=\$PATH:\$ANDROID_HOME/tools:\$ANDROID_SDK_HOME/platform-tools:\$GRADLE_HOME/bin' >> /home/ubuntu/.bashrc
