--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -53,3 +53,12 @@ RUN \
 
 RUN chmod a+x /home/ubuntu/workspace/.profile 
 
+
+
+# Setup environment
+ENV ANDROID_HOME /usr/local/android-sdk-linux  && \
+    ANDROID_SDK_HOME /usr/local/android-sdk-linux  && \
+    GRADLE_HOME /usr/local/gradle-2.5 && \
+    PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_SDK_HOME}/platform-tools:${$GRADLE_HOME}/bin;
+
+
