--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -48,5 +48,5 @@ RUN for filter in tools,platform-tools,android-20,android-22,android-23,extra,bu
 
 # Set PATH
 ENV ANDROID_HOME=/usr/local/android-sdk-linux ANDROID_SDK_HOME=/usr/local/android-sdk-linux GRADLE_HOME=/usr/local/gradle-2.5 
-ENV PATH $PATH:/usr/local/android-sdk-linux/tools:/usr/local/android-sdk-linux/platform-tools:/usr/local/gradle-2.5/bin
+ENV PATH {$PATH}:/usr/local/android-sdk-linux/tools:/usr/local/android-sdk-linux/platform-tools:/usr/local/gradle-2.5/bin
     
