--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -5,7 +5,7 @@ FROM cloud9/workspace
 # https://github.com/lukin0110/docker-android-build
 MAINTAINER Jeremy Ellis <keyfreemusic@gmail.com>
 
-ADD ./files/workspace /home/ubuntu/workspace
+ADD ./files /home/ubuntu/workspace
 
 RUN chmod -R g+w /home/ubuntu/workspace && \
     chown -R ubuntu:ubuntu /home/ubuntu/workspace
