--- a/ws-android/Dockerfile
+++ b/ws-android/Dockerfile
@@ -1,12 +1,16 @@
 
+FROM cloud9/workspace
+# Android Build Dockerfile for Parafuzo.
+#
+# This is a fork from:
+# https://github.com/lukin0110/docker-android-build
+MAINTAINER Jeremy Ellis <keyfreemusic@gmail.com>
 
+ADD ./files/workspace /home/ubuntu/workspace
 
-
-
-
-
-
-
+RUN chmod -R g+w /home/ubuntu/workspace && \
+    chown -R ubuntu:ubuntu /home/ubuntu/workspace
+    
 
 
 RUN printf "\n\nexport ANDROID_SDK_HOME=/home/ubuntu/workspace/android-sdk-linux\nexport PATH=\$PATH:\$ANDROID_SDK_HOME/tools\nexport PATH=\$PATH:\$ANDROID_SDK_HOME/platform-tools"  >> /home/ubuntu/workspace/.profile
